style: Fix Page scrollbar blindness

--- a/themes/navy/source/css/_partial/page.styl
+++ b/themes/navy/source/css/_partial/page.styl
@@ -117,7 +117,7 @@ note-warn = hsl(0, 100%, 50%)
 .article-content
   line-height: line-height
   color: color-default
-  overflow-x: scroll
+  overflow-x: auto
   @media print
     font-size: 12pt
   p, ol, ul, dl, table, blockquote, iframe, .highlight
